--- a/static/mobile.css
+++ b/static/mobile.css
@@ -259,6 +259,7 @@ button {
   padding: 2px 5px 2px 5px;
   border-radius: 0;
   display: inline-block;
+  vertical-align: bottom;
 }
 
 .priorbutton {
