--- a/static/mobile.css
+++ b/static/mobile.css
@@ -476,3 +476,44 @@ label.readylabel {
   box-sizing: border-box;
   /* Opera/IE 8+ */
 }
+
+.calendar3 {
+  background: #222;
+  width: 100%;
+  text-align: center;
+}
+
+.calendar3 thead tr:last-child {
+  font-size: small;
+  color: rgb(85, 85, 85);
+}
+
+.calendar3 tbody td {
+  color: rgb(44, 86, 122);
+}
+
+.calendar3 tbody td:nth-child(n+6), #calendar3 .holiday {
+  color: rgb(231, 140, 92);
+}
+
+.calendar3 button.calendarblock.planed {
+  /* background: blanchedalmond; */
+  background: darkslategray;
+}
+
+.calendar3 button.calendarblock.today {
+  background: lightcoral;
+}
+
+.calendar3 button.calendarblock.highlightedday {
+  background: #FFAA00;
+}
+
+.calendarblock {
+  color: whitesmoke;
+  background-color: transparent;
+  border-radius: 0;
+  width: 100%;
+  border: none;
+  /* border: 2px white solid; */
+}
