--- a/static/mobile.css
+++ b/static/mobile.css
@@ -77,6 +77,7 @@ option:checked {
 .opns {}
 
 .opn {
+  font-size: 10.8pt;
   text-align: left;
   background: none;
   margin: 2px;
@@ -84,7 +85,6 @@ option:checked {
   color: grey;
   border: none;
   border-radius: 0;
-  margin-right: 6px;
 }
 
 .arr {
@@ -300,14 +300,6 @@ button {
   font-family: monospace;
 }
 
-.selected .opn {
-  background: transparent;
-  margin: 0;
-  color: white;
-  font-style: normal;
-  font-size: 14pt;
-}
-
 .text {
   word-break: break-word;
   background: none;
@@ -329,6 +321,7 @@ button {
 }
 
 .tag {
+  font-size: 10.8pt;
   width: auto;
   font-family: 'Inter', sans-serif;
   /* background: #333; */
@@ -411,13 +404,14 @@ label.mainbutton.timebutton {
 }
 
 .timebuttons {
-  text-align: justify;
+  text-align: center;
   margin-bottom: -12pt;
 }
 
 .dateinp {
-  min-width: 24%;
-  margin: 2px;
+  height: 20px;
+  width: 25%;
+  margin: 4px; 
 }
 
 .mainbutton {
@@ -517,4 +511,9 @@ label.readylabel {
   border-radius: 0;
   width: 100%;
   border: none;
+}
+
+.rank{
+  font-size: 10.8pt;
+  color: gray;
 }
