--- a/static/mobile.css
+++ b/static/mobile.css
@@ -340,10 +340,6 @@ button {
   font-family: 'IBM Plex Sans', sans-serif;
 }
 
-.time {
-  font-family: monospace;
-  text-align: left;
-}
 
 .autocomplete {
   width: 100%;
@@ -516,4 +512,14 @@ label.readylabel {
 .rank{
   font-size: 10.8pt;
   color: gray;
+}
+.time {
+  border: 2px solid #333;
+  padding-left: 2px;
+  padding-right: 2px;
+  color: white;
+  color: gray;
+  font-size:11.4pt ;
+  font-family: monospace;
+  text-align: left;
 }
