--- a/static/mobile.css
+++ b/static/mobile.css
@@ -143,6 +143,7 @@ input {
   /* display: none; */
   position: fixed;
   left:50%;
+  transform: translateX(-50%);
   bottom: 10px;
   padding: 2px;
   border: 2px solid #333;
@@ -228,9 +229,6 @@ option.fifth {
   background: #37174F;
 }
 
-.past {
-  background-color: #E4B7E5;
-}
 
 .cantdo {
   background: #333;
@@ -537,4 +535,8 @@ border-bottom-color: #517AA4;
 
 .btenth{
 border-bottom-color: #37174F;
+}
+
+.past {
+  color: #995151;
 }
