--- a/static/mobile.css
+++ b/static/mobile.css
@@ -24,17 +24,12 @@ table {
   background: black;
 }
 
-#newtaskbutton {
-  position: fixed;
-  width: 20%;
-  bottom: 10px;
-  right: 0;
-}
+
 
 td.taskmarker {
-  border-bottom: 4px solid black;
-  border-top: 4px solid black;
-  width: 7px;
+  border-bottom: 6px solid black;
+  border-top: 6px solid black;
+  width: 9px;
 }
 
 .nondisplay {
@@ -113,7 +108,7 @@ input[type="checkbox"] {
 
 .editor {
   text-align: right;
-    background-color: #222;
+  background-color: #222;
   padding-top: 10px;
 }
 
@@ -142,7 +137,7 @@ input {
 #status {
   /* display: none; */
   position: fixed;
-  left:50%;
+  left: 50%;
   transform: translateX(-50%);
   bottom: 10px;
   padding: 2px;
@@ -410,7 +405,7 @@ label.mainbutton.timebutton {
 .dateinp {
   height: 20px;
   width: 25%;
-  margin: 4px; 
+  margin: 4px;
 }
 
 .mainbutton {
@@ -494,17 +489,18 @@ label.readylabel {
   border: none;
 }
 
-.rank{
+.rank {
   font-size: 10.8pt;
   color: gray;
 }
+
 .time {
   border: 2px solid #333;
   padding-left: 2px;
   padding-right: 2px;
   color: white;
   color: gray;
-  font-size:11.4pt ;
+  font-size: 11.4pt;
   font-family: monospace;
   text-align: left;
 }
@@ -529,18 +525,40 @@ label.readylabel {
   border-bottom-color: #FFC43D;
 }
 
-.bninth{
-border-bottom-color: #517AA4;
+.bninth {
+  border-bottom-color: #517AA4;
 }
 
-.btenth{
-border-bottom-color: #37174F;
+.btenth {
+  border-bottom-color: #37174F;
 }
 
 .past {
   color: #995151;
 }
 
-.profitinp{
-width: 15%;
+.profitinp {
+  width: 15%;
+}
+
+.tdtask {
+
+  padding-left: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#newtaskbutton {
+  background: url("plus.png") center;
+  background-size: 100% auto;
+  border-radius: 50%;
+  position: fixed;
+  width: 10vh;
+  height: 10vh;
+  max-height: 10vw;
+  max-width: 10vw;
+  bottom: 15px;
+  right: 15px;
+  font-size: 50pt;
+  font-family: monospace;
 }
