--- a/src/static/main.css
+++ b/src/static/main.css
@@ -59,8 +59,8 @@ table {
 
 
 td.taskmarker {
-    border-bottom: 6px solid var(--background-main);
-    border-top: 6px solidvar(--background-main);
+    border-bottom: 5px solid var(--background-main);
+    border-top: 5px solid var(--background-main);
     width: 9px;
 }
 
@@ -331,9 +331,13 @@ button {
 }
 
 .bottom {
+    padding-top: 70px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 70px;
     font-size: 16px;
     font-style: italic;
-    font-family: monospace;
+    font-family: 'Roboto Mono', monospace;
 }
 
 .text {
@@ -551,7 +555,7 @@ label.readylabel {
     color: white;
     color: gray;
     font-size: 11.4pt;
-    font-family: monospace;
+    font-family: 'Roboto Mono', monospace;
     text-align: left;
 }
 
@@ -650,12 +654,12 @@ label.readylabel {
     bottom: 15px;
     right: 15px;
     font-size: 10vh;
-    font-family: monospace;
+    font-family: 'Roboto Mono', monospace;
 }
 
 #telegramlogin {
     text-align: center;
-    padding: 70px;
+    padding-top: 70px;
 }
 
 .search, #newtaskbutton, #scrollTopButton {
