--- a/src/static/main.css
+++ b/src/static/main.css
@@ -161,6 +161,7 @@ input {
     font-family: 'IBM Plex Sans', sans-serif;
     font-size: 12pt;
     border: none;
+    box-shadow: none;
     color: var(--color-contrast);
     /* background: white; */
 }
@@ -180,7 +181,6 @@ input {
     padding: 2px;
     border: 2px solid var(--background-table);
     background-color: var(--background-main);
-    ;
 }
 
 
@@ -431,15 +431,15 @@ label.mainbutton.timebutton {
 
 
 .dateinp {
-    width: 100%;
+    background: white;
     box-sizing: border-box;
-    padding: 2px 0 2px 5px;
+    padding: 2px 10px 2px 5px;
     border: 4px solid var(--background-area);
     /* border-left: 4px solid var(--background-area); */
 }
 
 .mainbutton {
-    text-align: left;
+    font-size: 12pt;
     box-sizing: border-box;
     margin: 0;
     border: 4px solid var(--background-table);
@@ -532,6 +532,7 @@ label.readylabel {
     background-color: transparent;
     border-radius: 0;
     width: 100%;
+    font-family: var(--font-mono), monospace;
 }
 
 .rank {
@@ -635,8 +636,9 @@ label.readylabel {
 }
 
 .profitinp {
+    padding-right: 0;
     box-sizing: border-box;
-    width: 10%;
+    width: 4em;
 }
 
 .tdtask {
