--- a/src/static/main.css
+++ b/src/static/main.css
@@ -77,7 +77,7 @@ table {
 td.taskmarker {
     border-bottom: 5px solid var(--background-main);
     border-top: 5px solid var(--background-main);
-    width: 9px;
+    width: 0.5em;
 }
 
 .nondisplay {
@@ -713,7 +713,7 @@ label.readylabel {
 .textareacontainer {
     background: var(--background-area);
     text-align: left;
-    margin: 9px;
+    margin: 0.5em;
 }
 
 .fiveblock {
@@ -744,10 +744,33 @@ label.readylabel {
 }
 
 .focused {
-    /* background-color: red; */
+    height: 1px;
 }
 
 td.focushead {
-    text-align: center;
-    width: 3em;
+    height: 1px;
+}
+
+.focustimer {
+    position: relative;
+    width: 5em;
+    height: calc(100% - 17px);
+    background: var(--background-main);
+    margin-right: 9px;
+
+    font-family: 'Noto Sans Mono', monospace;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.focustimer div {
+    color: gray;
+    font-size: 11.4pt;
 }
